[gd_scene load_steps=3 format=2]

[ext_resource path="res://Mechanisms/Drain.gd" type="Script" id=1]
[ext_resource path="res://SFX/water.wav" type="AudioStream" id=2]

[node name="Drain" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="SFX_Banish" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Drain_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
